Fixed bug that showed no games on mobile

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -2918,7 +2918,7 @@ input[type="button"].btn-block {
   display: none;
 }
 
-@media (min-width: 576px) {
+@media (min-width: 0px) {
   .show-sm {
     display: flex;
   }
